--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+/* === General === */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* === Specific === */
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  border-right: 2px solid rgba(0,22,22,0.4);
+}
+#navbar ul {
+  list-style: none;
+}
 code {
   display: block;
   white-space: pre;
